🔁 Ajustes em configurações

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Hello Spring Salesforce</title>
+    <title>Test Salesforce</title>
 
     <link rel="stylesheet" type="text/css" href="webjars/salesforce-lightning-design-system/2.1.4/assets/styles/salesforce-lightning-design-system.min.css"/>
 
@@ -30,7 +30,7 @@
     <header class="slds-global-header_container">
         <div class="slds-global-header slds-grid slds-grid--align-spread">
             <div class="slds-global-header__item">
-                <div class="slds-text-heading--large">Hello Spring Salesforce</div>
+                <div class="slds-text-heading--large">Test Salesforce</div>
             </div>
         </div>
     </header>
